Updated MONTHLY, DAILY to lower case

--- a/etc/html/ar_custom_form.html
+++ b/etc/html/ar_custom_form.html
@@ -135,9 +135,9 @@
                     <div class="box-header"><H3 class="box-title"> <i class="fa fa-gear"> </i>   Granularity</H3></div>
                     <div class="box-body">
                         <div class="form_group">
-                            <input type="radio" value="DAILY" name="granularity"
+                            <input type="radio" value="daily" name="granularity"
                                    id="granularity1" checked="true"/> daily
-                            <input style="margin-left:20px" type="radio" value="MONTHLY" name="granularity"
+                            <input style="margin-left:20px" type="radio" value="monthly" name="granularity"
                                    id="granularity2"/> monthly
                         </div>
                     </div>
